# Autosshpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
docs/: next-session-platform-plan.md
src/: autossh.cpp  autossh.hpp  autossh.ixx  common.ixx  config.cpp  config.hpp  config.ixx  main.cpp  platform_control.cpp  platform_control.hpp  platform_control.ixx
